--- a/index.html
+++ b/index.html
@@ -9,30 +9,114 @@
 <body>
     <div class="container">
         <h1>Timebox Template</h1>
-        <form id="timebox-form">
-            <div class="timebox">
-                <label for="task">Task:</label>
-                <input type="text" id="task" name="task" placeholder="Enter task" required>
-            </div>
-            <div class="timebox">
-                <label for="start-time">Start Time:</label>
-                <input type="time" id="start-time" name="start-time" required>
-            </div>
-            <div class="timebox">
-                <label for="end-time">End Time:</label>
-                <input type="time" id="end-time" name="end-time" required>
-            </div>
-            <div class="timebox">
-                <label for="description">Description:</label>
-                <textarea id="description" name="description" placeholder="Enter description"></textarea>
-            </div>
-            <button type="submit">Add Timebox</button>
-        </form>
-        <div id="timebox-list">
-            <h2>Your Timeboxes</h2>
-            <ul id="timebox-items"></ul>
-        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>:00</th>
+                    <th>:30</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 5 AM to 11 AM -->
+                <tr>
+                    <td>5</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <!-- 12 PM to 11 PM -->
+                <tr>
+                    <td>12</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
